--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://sandesh11:sandesh11@skillconnectserver.m982aq2.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://sandesh11:sJIjB0YB86Gw0rvB@skillconnectserver.m982aq2.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=development
 API_URL=http://localhost:3000/api/
