--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@refinedev/react-hook-form": "^4.8.12",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
